--- a/frontend_v2/package.json
+++ b/frontend_v2/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.30.1",
+    "react-simple-keyboard": "^3.8.111",
     "remark-gfm": "^4.0.1",
     "uuid": "^11.1.0"
   },
